# FirstNdk

./: .gitignore  ReadMe.md  settings.gradle
app/: .gitignore  ReadMe.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/: java2Head.bat
app/src/main/jni/: Android.mk  Application.mk  Jni2Lib.cpp  Jni3Lib.cpp  Jni4Lib.cpp  Jni5Lib.cpp  JniLib.cpp  com_xue_firstndk_Jni2Test.h  com_xue_firstndk_Jni3Test.h  com_xue_firstndk_Jni5Test.h  com_xue_firstndk_JniTest.h
livecamera/: ReadMe.md  build.gradle
livecamera/src/main/: AndroidManifest.xml
nativeactivity_events/: ReadMe.md  build.gradle  踩坑记.txt
nativeactivity_events/src/main/: AndroidManifest.xml
nativeactivity_glue/: ReadMe.md  build.gradle
nativeactivity_glue_window/: ANativeWindow API.txt  ReadMe.md  build.gradle  踩坑记.txt
nativeactivity_glue_window/src/main/: AndroidManifest.xml
nativeactivity_glue_window2/: ReadMe.md  build.gradle
nativeactivity_glue_window2/src/main/: AndroidManifest.xml
nativeactivity_lifecycle/: C++知识点.md  build.gradle  知识点.md  踩坑记.txt
nativeactivity_lifecycle/src/main/: AndroidManifest.xml
nativeactivity_lifecycle/src/main/cpp/: CMakeLists.txt  NativeMain.cpp  NativeMain.h
opengles_1/: ReadMe.md  build.gradle
opengles_1/src/main/: AndroidManifest.xml
opengles_java/: ReadMe.md  build.gradle
opengles_java/src/main/: AndroidManifest.xml
testalooper/: ReadMe.md  build.gradle  踩坑记.txt
testalooper/src/main/: AndroidManifest.xml
testexecutable/: ReadMe.md  build.gradle
testexecutable/src/main/: AndroidManifest.xml
(+97 files in other folders)
